--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    
+    <h1>jessica levtsenyuk</h1>
     <script src="main.js"></script>
 </body>
 </html>
