💃🏼 sass and svgs added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <title>Jess Lev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Tamma|Baloo+Thambi|Montserrat|Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
 </head>
-<body>
-    <h1>jessica levtsenyuk</h1>
+<body class="about">
+
+    <div class="logo-nav">
+        <h1 class="logo">jessica levtsenyuk</h1>
+        <ul class="nav about">
+            <li><a href="">about</a></li>
+            <li><a href="">work</a></li>
+            <li><a href="">contact</a></li>
+        </ul>
+    </div>
+
+    <div class="main content"> 
+
+    </div>
+
+
     <script src="main.js"></script>
 </body>
 </html>
