😴 beginning base of page

--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jess Lev</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Tamma|Baloo+Thambi|Montserrat|Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-</head>
-<body class="about">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>Jess Lev</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Tamma|Baloo+Thambi|Montserrat|Open+Sans&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			media="screen"
+			href="styles/main.css"
+		/>
+	</head>
+	<body class="about">
+		<div class="container">
+			<h1 class="logo">jessica levtsenyuk</h1>
 
-    <div class="logo-nav">
-        <h1 class="logo">jessica levtsenyuk</h1>
-        <ul class="nav about">
-            <li><a href="">about</a></li>
-            <li><a href="">work</a></li>
-            <li><a href="">contact</a></li>
-        </ul>
-    </div>
+			<div class="main content"></div>
 
-    <div class="main content"> 
+			<ul class="nav about">
+				<li><a class="active" href="">about</a></li>
+				<li><a href="">work</a></li>
+				<li><a href="">contact</a></li>
+			</ul>
+		</div>
 
-    </div>
-
-
-    <script src="main.js"></script>
-</body>
+		<script src="main.js"></script>
+	</body>
 </html>
