bare bones of project coming together

--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>Jess Lev</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link
-			href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Tamma|Baloo+Thambi|Montserrat|Open+Sans&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			type="text/css"
-			media="screen"
-			href="styles/main.css"
-		/>
+		<link href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Tamma|Baloo+Thambi|Montserrat|Open+Sans&display=swap" rel="stylesheet"/>
+		<link rel="stylesheet" type="text/css" media="screen" href="styles/main.css"/>
+		<script
+		src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+		crossorigin="anonymous"></script>
 	</head>
-	<body class="about">
+	<body>
 		<div class="container">
-			<h1 class="logo">jessica levtsenyuk</h1>
-
-			<div class="main content"></div>
-
-			<ul class="nav about">
-				<li><a class="active" href="">about</a></li>
-				<li><a href="">work</a></li>
-				<li><a href="">contact</a></li>
-			</ul>
+			<div class="wrapper about">
+				<nav class="navigation-wrapper">
+					<div class="logo">
+						<a href="">jessica levtsenyuk</a>
+					</div>
+					<ul class="navigation">
+						<li id="about" class="nav-tab"><span>about</span></li>
+						<li id="work" class="nav-tab"><span href="">work</span></li>
+						<li id="contact" class="nav-tab"><span href="">contact</span></li>
+					</ul>
+				</nav>
+				<main class="main content"></main>
+			</div>
 		</div>
-
 		<script src="main.js"></script>
+
 	</body>
 </html>
