containers added with vh and media queries 📱

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<div class="container">
+		<div class="container about">
 			<div class="wrapper about">
 				<nav class="navigation-wrapper">
 					<div class="logo">
@@ -25,7 +25,11 @@
 						<li id="contact" class="nav-tab"><span href="">contact</span></li>
 					</ul>
 				</nav>
-				<main class="main content"></main>
+				<main class="main-content">
+					<div class="content-container">
+
+					</div>
+				</main>
 			</div>
 		</div>
 		<script src="main.js"></script>
