--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</nav>
 				<main class="main-content">
 					<div class="content-container">
-
+						<div class="content"></div>
 					</div>
 				</main>
 			</div>
