about page adding in parts

--- a/index.html
+++ b/index.html
@@ -26,8 +26,34 @@
 					</ul>
 				</nav>
 				<main class="main-content">
+					<div class="svg-content">
+							<img src="./assets/svg/yellow-line-squiggle.svg" alt="">
+						</div>
 					<div class="content-container">
-						<div class="content"></div>
+						<!-- ABOUT PAGE -->
+						<div id="about-page" class="about-page content">
+							<div class="image-content">
+								<img src="./assets/jesslev.png" alt="">
+							</div>
+							<div class="text-content">
+								<h2>making things in #ATX</h2>
+								<p>my name is jessica and i'm an illustrator who creates incredible work. you can find me making art on my ipad,
+									hiking the greenbelt or taking some new photos with my camera. oh, and i make music too! gander about this site as
+									you feel and i can't wait to show you what i've been working on!</p>
+							</div>
+						</div>
+						<!-- WORK PAGE -->
+						<!-- <div id="work-page" class="work-page content">
+							<div class="image-content">
+								<img src="./assets/jesslev.png" alt="">
+							</div>
+							<div class="text-content">
+								<h2>making things in #ATX</h2>
+								<p>my name is jessica and i'm an illustrator who creates incredible work. you can find me making art on my ipad,
+									hiking the greenbelt or taking some new photos with my camera. oh, and i make music too! gander about this site as
+									you feel and i can't wait to show you what i've been working on!</p>
+							</div>
+						</div> -->
 					</div>
 				</main>
 			</div>
