additional vh for responsiveness

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
 					</ul>
 				</nav>
 				<main class="main-content">
-					<div class="svg-content">
-							<img src="./assets/svg/yellow-line-squiggle.svg" alt="">
-						</div>
+					<div class="svg-yellow-squiggle">
+						<img src="./assets/svg/yellow-line-squiggle.svg" alt="">
+					</div>
+					<div class="svg-half-full-circle">
+						<img src="./assets/svg/half-full-circle.svg" alt="">
+					</div>
+
 					<div class="content-container">
 						<!-- ABOUT PAGE -->
 						<div id="about-page" class="about-page content">
