icon logo for page and a tags 👩🏼‍💻

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Jess Lev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
+	<link rel="icon" type="image/x-icon" href="https://i.ibb.co/NK7fjhS/jesslev-logo-1-1.png" />
+	<link
       href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Tamma|Baloo+Thambi|Montserrat|Open+Sans&display=swap"
       rel="stylesheet"
     />
@@ -27,16 +28,16 @@
         <nav class="navigation-wrapper">
           <div class="logo"><a href="">jessica levtsenyuk</a></div>
           <ul class="navigation">
-            <li id="about" class="nav-tab"><span>about</span></li>
-            <li id="work" class="nav-tab"><span href="">work</span></li>
-            <li id="contact" class="nav-tab"><span href="">contact</span></li>
+            <li id="about" class="nav-tab active"><a >about</a></li>
+            <li id="work" class="nav-tab"><a >work</a></li>
+            <li id="contact" class="nav-tab"><a >contact</a></li>
           </ul>
         </nav>
         <main class="main-content">
-          <div class="svg-yellow-squiggle">
+          <div class="svg-yellow-squiggle visible">
             <img src="./assets/svg/yellow-line-squiggle.svg" alt="" />
           </div>
-          <div class="svg-half-full-circle">
+          <div class="svg-half-full-circle visible">
             <img src="./assets/svg/half-full-circle.svg" alt="" />
           </div>
 
