contact page responsive 🐯

--- a/index.html
+++ b/index.html
@@ -74,7 +74,18 @@
               <div class="image-content">
                 <img src="./assets/cheetah-wallpaper.png" alt="" />
               </div>
-              <div class="text-content"></div>
+              <div class="text-content">
+				  <div class="contact-label">
+					  <p>Email</p>
+					  <p>Phone</p>
+					  <p>Instagram</p>
+				  </div>
+				  <div class="contact-info">
+					  <p>jessicalev@gmail.com</p>
+					  <p>402-567-8901</p>
+					  <p>@mechanicalbully</p>
+				  </div>
+			  </div>
             </div>
           </div>
         </main>
