--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container about">
       <div class="wrapper about">
-        <nav class="navigation-wrapper">
+        <nav class="navigation-wrapper about">
           <div class="logo"><a href="">jessica levtsenyuk</a></div>
           <ul class="navigation">
             <li id="about" class="nav-tab active"><a >about</a></li>
