add responsive layout

--- a/index.html
+++ b/index.html
@@ -59,16 +59,40 @@
               </div>
             </div>
             <!-- WORK PAGE -->
-            <div id="work-page" class="work-page content hidden">
-				<div class="portfolio-content image-content">
-					<img src="./assets/jesslev.png" alt="" />
-					<h2>Call Girl</h2>
+			<div id="work-page" class="work-page content hidden">
+				<div class="portfolio-row">
+					<div class="portfolio-content image-content">
+						<img src="./assets/portfolio/autumn-girl.png" alt="" />
+					</div>
+					<div class="portfolio-content image-content">
+						<img src="./assets/portfolio/japanese-circle.png" alt="" />
+					</div>
 				</div>
-				<div class="portfolio-content image-content">
-					<img src="./assets/jesslev.png" alt="" />
-					<h2>Call Girl</h2>
+				<div class="portfolio-row">
+					<div class="portfolio-content image-content">
+						<img src="./assets/portfolio/lobster.png" alt="" />
+					</div>
+					<div class="portfolio-content image-content">
+						<img src="./assets/portfolio/mechanical-bully.png" alt="" />
+					</div>
 				</div>
-            </div>
+				<div class="portfolio-row">
+					<div class="portfolio-content image-content">
+						<img src="./assets/portfolio/multi-girls.png" alt="" />
+					</div>
+					<div class="portfolio-content image-content">
+						<img src="./assets/portfolio/shrimp-cocktail.png" alt="" />
+					</div>
+				</div>
+				<div class="portfolio-row">
+					<div class="portfolio-content image-content">
+						<img src="./assets/portfolio/texan.png" alt="" />
+					</div>
+					<div class="portfolio-content image-content">
+						<img src="./assets/portfolio/women-print.png" alt="" />
+					</div>
+				</div>
+			</div>
             <!-- CONTACT PAGE -->
             <div id="contact-page" class="contact-page content hidden">
               <div class="image-content">
