--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <li id="about" class="nav-tab active"><a >about</a></li>
             <li id="work" class="nav-tab"><a >work</a></li>
             <li id="contact" class="nav-tab"><a >contact</a></li>
+            <li id="ripe" class="nav-tab"><a target="_blank"href="file:///Users/bekahwhittle/happybirthday/jesslev/ripe.html">ripe</a></li>
+
           </ul>
         </nav>
         <main class="main-content">
