rearranged nav order

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     ></script>
   </head>
   <body>
-    <div class="container about">
-      <div class="wrapper about">
-        <nav class="navigation-wrapper about">
+    <div class="container work">
+      <div class="wrapper work">
+        <nav class="navigation-wrapper work">
           <div class="logo"><a href="">jessica levtsenyuk</a></div>
           <ul class="navigation">
-            <li id="about" class="nav-tab active"><a >about</a></li>
-            <li id="work" class="nav-tab"><a >work</a></li>
+            <li id="work" class="nav-tab active"><a >work</a></li>
+            <li id="about" class="nav-tab"><a >about</a></li>
             <li id="contact" class="nav-tab"><a >contact</a></li>
           </ul>
         </nav>
@@ -43,7 +43,7 @@
 
           <div class="content-container">
             <!-- ABOUT PAGE -->
-            <div id="about-page" class="about-page content visible">
+            <div id="about-page" class="about-page content hidden">
               <div class="image-content">
                 <img src="./assets/jesslev.png" alt="" />
               </div>
@@ -59,7 +59,7 @@
               </div>
             </div>
             <!-- WORK PAGE -->
-			<div id="work-page" class="work-page content hidden">
+			<div id="work-page" class="work-page content visible">
 				<div class="portfolio-row">
 					<div class="portfolio-content image-content">
 						<img src="./assets/portfolio/autumn-girl.png" alt="" />
