--- a/index.html
+++ b/index.html
@@ -84,6 +84,110 @@
                 <img src="./assets/portfolio/women-print.png" alt="" />
               </div>
             </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_01.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_02png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_03.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_04.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_05.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_06.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_07.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_08.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_09.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_10.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_11.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_12.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_13.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_14.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_15.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_16.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_17.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_18.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_19.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_20.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_21.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_22.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_23.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_24.png" alt="" />
+              </div>
+            </div>
+            <div class="portfolio-row">
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_25.png" alt="" />
+              </div>
+              <div class="portfolio-content image-content">
+                <img src="./assets/portfolio/jl_26.png" alt="" />
+              </div>
+            </div>
           </div>
           <!-- CONTACT PAGE -->
           <div id="contact-page" class="contact-page content hidden">
