updates to contact page

--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
               <img src="./assets/jesslev.png" alt="" />
             </div>
             <div class="text-content">
-              <h2>making things in #ATX</h2>
+              <h2>A little about me...</h2>
               <p>
-                my name is jessica and i'm an illustrator who creates
-                incredible work. you can find me making art on my ipad, hiking
-                the greenbelt or taking some new photos with my camera. oh,
-                and i make music too! gander about this site as you feel and i
-                can't wait to show you what i've been working on!
+                Jessica Levtsenyuk is an illustrator and graphic designer based in Austin, Texas. She finds inspiration through bright colors, music and personal life experiences. 
+                In her work, Jessica attempts to create a space for viewers to reflect on the human condition: growth, emotion, aspiration and conflict. 
+
+                While digital illustration and design is her forte, she often experiments with other media. She also enjoys drawing with graphite and ink, and painting with oils and acrylics.
               </p>
             </div>
           </div>
