re-structure might be necesary for scaling

--- a/pages/digital.html
+++ b/pages/digital.html
@@ -20,8 +20,6 @@
       <nav class="navigation-wrapper work">
         <div class="logo"><a href="">jessica levtsenyuk</a></div>
         <ul class="navigation">
-          <a href="pages/digital.html">DIGITAL</a>
-
           <li id="work" class="nav-tab active"><a>work</a></li>
           <li id="about" class="nav-tab active"><a>about</a></li>
           <li id="contact" class="nav-tab active"><a>contact</a></li>
@@ -37,21 +35,8 @@
 
         <div class="content-container">
           <!-- ABOUT PAGE -->
-          <div id="about-page" class="about-page content hidden">
-            <div class="image-content">
-              <img src="./assets/jesslev.png" alt="" />
-            </div>
-            <div class="text-content">
-              <h2>A little about me...</h2>
-              <p>
-                Jessica Levtsenyuk is an illustrator and graphic designer based in Austin, Texas. She finds inspiration through bright colors, music and personal life experiences. 
-                In her work, Jessica attempts to create a space for viewers to reflect on the human condition: growth, emotion, aspiration and conflict. 
-
-                While digital illustration and design is her forte, she often experiments with other media. She also enjoys drawing with graphite and ink, and painting with oils and acrylics.
-              </p>
-            </div>
-          </div>
           <!-- WORK PAGE -->
+          HHEEELLLOOO WOOORRRLLLDDDD
           <div id="work-page" class="work-page content visible">
             <div class="portfolio-row">
               <div class="portfolio-content image-content">
@@ -191,23 +176,6 @@
             </div>
           </div>
           <!-- CONTACT PAGE -->
-          <div id="contact-page" class="contact-page content hidden">
-            <div class="image-content">
-              <img src="./assets/cheetah-wallpaper.png" alt="" />
-            </div>
-            <div class="text-content">
-              <div class="contact-label">
-                <p>Email</p>
-                <p>Phone</p>
-                <p>Instagram</p>
-              </div>
-              <div class="contact-info">
-                <p>jessicalev@gmail.com</p>
-                <p>402-567-8901</p>
-                <p>@mechanicalbully</p>
-              </div>
-            </div>
-          </div>
         </div>
       </main>
     </div>
