--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Tamma|Baloo+Thambi|Montserrat|Open+Sans&display=swap"
     rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/NK7fjhS/jesslev-logo-1-1.png">
     <title>Jess Lev</title>
   </head>
